--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,14 @@
     <meta name="discription" content="public page of Apex karting team">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>APEX karting team</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <!-- <link rel="stylesheet" href="/css/style.css"> -->
 </head>
 
 <body>
     <div class="page-header">
         <div class="header-top">
             <div class="header-logo">
-                <a href="#"> <img src="img/apex.png" height="200" alt="apex logo"></a>
+                <a href="#"> <img src="/assets/img/apex.png" height="200" alt="apex logo"></a>
             </div>
 
         </div>
@@ -44,7 +44,7 @@
                 <i>source: <a href="https://kartodrom.com.ua/news/news/4-i-etap-chempionatu-ukrayini-z-khobi-kartingu" target="_blank">kartodrom</a></i>
             </dt>
             <dd>
-                <img src="img/kam.jpg" height="100" alt="Чемпионат Украины по хобби картингу, г. Каменское">
+                <img src="/assets/img/kam.jpg" height="100" alt="Чемпионат Украины по хобби картингу, г. Каменское">
                 <p>first story of us</p>
             </dd>
             <dt>
@@ -52,7 +52,7 @@
                 <i>source: <a href="https://www.redbull.com/ua-uk/red-bull-kart-fight-final-2017" target="_blank">redbull</a></i>
             </dt>
             <dd>
-                <img src="img/rb3.jpg" height="100" alt="Национальный финал чемпионата мира по аматорскому картингу, г. Киев">
+                <img src="/assets/img/rb3.jpg" height="100" alt="Национальный финал чемпионата мира по аматорскому картингу, г. Киев">
                 <p>second story</p>
             </dd>
         </dl>
@@ -75,21 +75,21 @@
         <a class="btn" title="Посмотреть все товары" href="#">Каталог</a>
         <div class="equipment-items">
             <div class="catalog-item">
-               <img src="img/products-st5.png" height="206">
+               <img src="/assets/img/products-st5.png" height="206">
                 <h3>item_1</h3>
                 <b>price_1</b>
                 <a class="btn" href="#">Описание</a>
                 <a class="btn" href="#">Купить</a>
             </div>
             <div class="catalog-item">
-                <img src="img/Carbn.png" height="206">
+                <img src="/assets/img/Carbn.png" height="206">
                 <h3>item_2</h3>
                 <b>price_2</b>
                 <a class="btn" href="#">Описание</a>
                 <a class="btn" href="#">Купить</a>
             </div>
             <div class="catalog-item">
-                <img src="img/item3.jpg" height="206">
+                <img src="/assets/img/item3.jpg" height="206">
                 <h3>item_3</h3>
                 <b>price_3</b>
                 <a class="btn" href="#">Описание</a>
@@ -100,7 +100,7 @@
     <div class="page-footer">
         <div class="footer-top">
             <div class="footer-logo">
-                <a href="#"> <img src="img/apex.png" height="200" alt="apex logo"></a>
+                <a href="#"> <img src="/assets/img/apex.png" height="200" alt="apex logo"></a>
             </div>
             <a href="#" class="btn">Join us</a>
         </div>
@@ -135,7 +135,7 @@
             copyright author
         </div>
     </div>
-    <script src="/src/index.js"></script>
+    <!-- <script src="/src/index.js"></script> -->
 </body>
 
 </html>
